Added some variables and tried to print a list
Jeg er meget tæt på at blive sindssyg fordi jeg ikke forstår lister, men vil gerne være bedre til dem. Jeg har siddet fast i godt 2 timer med få listen til at virke og den printer ikke det jeg vil have den til :(

--- a/Skole Oversigt/School/School/School.csproj
+++ b/Skole Oversigt/School/School/School.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Ansat\Ansat.csproj" />
+    <ProjectReference Include="..\Hold\Hold.csproj" />
+    <ProjectReference Include="..\Lokale\Lokale.csproj" />
+  </ItemGroup>
+
 </Project>
