--- a/Skole Oversigt/School/Ansat/Ansat.csproj
+++ b/Skole Oversigt/School/Ansat/Ansat.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Hold\Hold.csproj" />
+  </ItemGroup>
+
 </Project>
